# k8s-snapshots

./: .drone.yml  .gitignore  CHANGES  DEVELOPMENT.md  Dockerfile  Jenkinsfile  LICENSE  README.md  ROLE.md  asyncutils.py  daemon.py  pykube_objects.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.circleci/: config.yml
.github/: FUNDING.yml
docs/: aws.md  digitalocean.md  google-cloud.md
examples/: backup-kops-etcd.yml  snapshotrule-aws.yml  snapshotrule-google.yml  snapshotrule-volumeclaim.yml
k8s_snapshots/: __main__.py  _config.py  asyncutils.py  config.py  context.py  core.py  errors.py  events.py  kube.py  logconf.py  logging.py  rule.py  serialize.py  snapshot.py
k8s_snapshots/backends/: __init__.py  abstract.py  aws.py  digitalocean.py  google.py  google_rd.py  googlecsi.py
manifests/: custom-resource-definition.yml  rbac.yaml  third-party-resource.yml
manifests/helm-gke/k8s-snapshots/: Chart.yaml  secrets.yaml  values.yaml
manifests/helm-gke/k8s-snapshots/docker/: kube_entry
manifests/helm-gke/k8s-snapshots/templates/: _helpers.tpl  configmap.yaml  custom-resource-definition.yaml  deployment.yaml  dockerconfigjson-secret.yaml  google-creds-secret.yaml  rbac.yaml  third-party-resource.yaml
tests/: conftest.py  test_aws_region_detection.py  test_config.py  test_deltas.py  test_kube.py  test_rule.py  test_snapshots.py  test_volume_from_pvc.py  test_volume_from_resources.py
tests/fixtures/: __init__.py  kube.py
